Changed saurabh's stuff to purvasha's

--- a/index.html
+++ b/index.html
@@ -2,21 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Saurabh Kadekodi</title>
+    <title>Purvasha Chakravarti</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-46605454-1', 'saurabh.io');
-      ga('send', 'pageview');
-
-    </script>
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
@@ -83,14 +73,14 @@
           <li><a href="#resume">Resume</a></li>
           <li><a href="#art_circle">Art Circle</a></li>
         </ul>
-        <h3><a class="muted" href="http://cs.cmu.edu/~saukad">Saurabh Kadekodi</a></h3>
+        <h3><a class="muted" href="https://purvashac.github.io">Purvasha Chakravarti</a></h3>
       </div>
 
       <hr>
 
       <div class="row-fluid">
         <div class="span6" align="center">
-          <img src="../images/saurabh_tabla.jpg" height=175px width=175px class="img-rounded">
+          <img src="../images/purvasha.jpg" height=175px width=175px class="img-rounded">
         </div>
         <div class="span6" align="center">
           <img src="../images/tag_cloud.png" height=300px width=300px class="img-rounded">
@@ -101,86 +91,10 @@
 
       <h4 class="muted" id="publications">Publications</h4>
       <div class="row-fluid" align="justify">
-        Kadekodi Saurabh, Swapnil Pimpale, Garth A. Gibson. "<a href="http://repository.cmu.edu/cgi/viewcontent.cgi?article=3603&context=compsci">Caveat-Scriptor: Write Anywhere Shingled Disks</a>". Proceedings of the 7th USENIX Conference on Hot Topics in Storage and File Systems. USENIX Association, 2015.
+        Krishnan, Sunder Ram, Chandra Sekhar Seelamantula, and Purvasha Chakravarti. <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6734684">Spatially Adaptive Kernel Regression Using Risk Estimation.</a> IEEE Signal Processing Letters 21.4 (2014): 445-448.
         <br>
         <br>
-        Kadekodi Saurabh, Jain Shweta. "<a href="https://www.kernel.org/doc/ols/2010/ols2010-pages-121-132.pdf">Taking Linux Filesystems to the Space Age: Space Maps in Ext4</a>". Proceedings of the Linux Symposium, Ottawa, 13-16 July 2010. Ed. Robyn Bergeron. Ottawa, 2010. 121-132.
-      </div>
-
-      <hr>
-
-      <h4 class="muted" id="patents">Patents</h4>
-      <div class="row-fluid" align="justify">
-        <div class="span12">
-          Kadekodi Saurabh, Narayanan Shrikanth, Ranade Sanyogita, Patil Bharat. 2012. Project-X. India Patent Application 2024/MUM/2012, filed July 12, 2012.
-        </div>
-      </div>
-
-      <hr>
-
-      <h4 class="muted" id="projects">Projects</h4>
-        <div class="row-fluid" align="justify">
-          <div class="span6">
-            <h4><a href="#">Burst-Buffers in HPC Systems</a></h4>
-            <p>Ongoing research on exploring efficient distributed file system architectures for supercomputers with burst-buffer installations. Burst-buffers are a layer of SSDs intended to gracefully accept a checkpoint dump from O(million) cores and eventually drain to underlying parallel file system.</p>
-            <br>
-            <h4><a href="https://www.kernel.org/doc/ols/2010/ols2010-pages-121-132.pdf">Space Maps in Ext4</a></h4>
-            <p>Designed and developed an extent-based free-space management technique for the Ext4 filesystem, called Space Maps, along with an allocator that uses Space Maps for disk-space allocation. Consisting of a red black tree and a log, Space Maps enhanced the allocation speed by 30% and deallocation speed by 80% and aided in reducing file and free space fragmentation (<a href="https://www.kernel.org/doc/ols/2010/ols2010-pages-121-132.pdf">publication</a> / <a href="space_maps_presentation.pdf">slides</a>).</p>
-            <br>
-            <h4><a href="#">SSD over Infiniband</a></h4>
-            <p>This study compared the performance between a locally connected SSD and remotely connected SSD (over infiniband). Using the lightweght SCSI RDMA protocol (SRP) for communication, we analyzed the costs in accessing remote SSDs and gained insights into enhancing software architectures of next-gen data centers from the storage perspective.</p>
-            <br>
-            <h4><a href="#">myFTL</a></h4>
-            <p>Designed and implemented a flash translation layer (FTL) with block-mapping, garbage collection (with four policies) and wear-leveling in FlashSim (an FTL simulation software). This project was enhanced and released as a course project for a 70+ student graduate level storage systems course (15-746) at CMU.</p>
-            <br>
-            <h4><a href="checkpoint_compression.pdf">Checkpoint Compression</a></h4>
-            <p>Studied the hazy nature of compression algorithms used in checkpoint / restore systems, and went on to suggest possible enhancements and future directions in library-level checkpoint compression for faster and more efficient checkpointing with reduced disk footprint (<a href="checkpoint_compression.pdf">technical survey</a>).</p>
-            <br>
-            <h4><a href="vm_comigration.pdf">VM Co-Migration</a></h4>
-            <p>Designed and developed a UDP based VM migration module in Palacios - an OS independent embeddable VM monitor. It supported multiple-source multiple-destination migrations specifically aimed at distributed applications in HPC environments (viz. supercomputers) to exploit page-sharing among participating nodes giving increased parallelism for migration (<a href="vm_comigration.pdf">technical report</a>).</p>
-            <br>
-            <h4><a>NIC of Time</a></h4>
-            <p>Designed and developed a tool for exploring the state space of all possible combinations of offloaded functionalities on the NIC vs their presence in the kernel. The tool performs extensive analysis of throughput and CPU utilization to suggest one or a group of features that should be offloaded to the NIC depending on the particular workload under consideration.</p>
-          </div>
-
-          <div class="span6">
-            <h4><a href="#">File System Aging</a></h4>
-            <p>Designed and developed a file system aging tool for artificially aging a file system to encourage realistic and fair benchmarking. The tool takes as input the file age and file size distributions from already aged file system images and performs a randomized sequence of creations and deletions to age the intended file system to mimic the characteristics of the reference file system image.</p>
-            <br>
-            <h4><a href="#">SMRfs</a></h4>
-            <p>Conducted under the guidance of Prof. Garth Gibson, this research aimed at ways to minimize the size of unshingled partitions (typically used for frequently updated data viz. metadata, small files, etc.) on shingled disks. It also involved the analysis and partial implementation of two cleaning algorithms originating from log structured file systems on SMRfs (<a href="https://wiki.pdl.cmu.edu/pub/SMR/WebHome/smr-disks-v1.0.tar.gz">code</a> / <a href="https://wiki.pdl.cmu.edu/SMR/WebHome">wiki</a> / <a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/user/saukad/www/trace.tar.bz2">traces</a> / technical report).</p>
-            <br>
-            <h4><a href="#">Price of Ext4</a></h4>
-            <p>Under the guidance of Prof. Remzi Arpaci-Dusseau this study measured the software overhead of the Ext4 file system with the advent of storage devices with microsecond latencies. We threw light on the shifting of bottlenecks in the various submodules of Ext4 and suggested optimizations to make it future-proof.</p>
-            <br>
-            <h4><a href="#">Database Garbage Collection</a></h4>
-            <p>Designed, developed and evaluated a co-operative (i.e. not stop-the-world) multi-threaded, lock-free, epoch based garbage collection mechanism for Peloton, a hybrid in-memory database system. Explored tradeoffs between optimizing for average latency versus tail latency due to absence of dedicated garbage collection thread.</p>
-            <br>
-            <h4><a href="active_databases.pdf">Active Databases</a></h4>
-            <p>Implemented a proof-of-concept of decentralized active databases on top of Kademlia - a distributed hash table on a decentralized peer-to-peer network. Active Databases essentially mean event-driven databases following event-condition-action (ECA) rules (<a href="active_databases.pdf">technical report</a>).</p>
-            <br>
-            <h4><a href="dna_compression.pdf">DNA Compression</a></h4>
-            <p>Explored a run-length based preprocessing scheme exploiting the power-law behavior of genomic data to reveal possibilities of Markovian compression and variable length encoding algorithms for higher compression ratio than provided by existing dictionary based compression algorithms (<a href="dna_compression.pdf">technical report</a>).</p>
-          </div>
-          </div>
-      <hr>
-
-      <h4 class="muted" id="resume">Resume</h4>
-      <div class="row-fluid">
-        <div class="span6">
-          Please download a copy of my resume from <a href="cv.pdf">here</a>.
-        </div>
-      </div>
-
-      <hr>
-
-      <h4 class="muted" id="art_circle">Art Circle</h4>
-      <div class="row-fluid">
-        <div class="span6">
-          <div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
-            <iframe allowfullscreen="" src="http://www.youtube.com/embed/PY_zbj8P5Pg" frameborder="0" width="420" height="345"></iframe>
-          </div>
-        </div>
+        Hechtlinger, Yotam, Purvasha Chakravarti, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">A Generalization of Convolutional Neural Networks to Graph-Structured Data.</a> arXiv preprint arXiv:1704.08165 (2017).
       </div>
 
     </div> <!-- /container -->
