Zoomed in photo

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li><a href="#publications">Publications</a></li>
-          <li><a href="#patents">Patents</a></li>
+          <!-- <li><a href="#patents">Patents</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#art_circle">Art Circle</a></li>
+          <li><a href="#art_circle">Art Circle</a></li> -->
         </ul>
         <h3><a class="muted" href="https://purvashac.github.io">Purvasha Chakravarti</a></h3>
       </div>
@@ -80,10 +80,10 @@
 
       <div class="row-fluid">
         <div class="span6" align="center">
-          <img src="../images/purvasha.jpg" height=175px width=175px class="img-rounded">
+          <img src="../images/purvasha.jpg" height=300px width=300px class="img-rounded">
         </div>
         <div class="span6" align="center">
-          <img src="../images/tag_cloud.png" height=300px width=300px class="img-rounded">
+          <!-- <img src="../images/tag_cloud.png" height=300px width=300px class="img-rounded"> -->
         </div>
       </div>
 
