Added sections for about me and CV

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
+          <li><a href="#aboutme">About Me</a></li>
           <li><a href="#publications">Publications</a></li>
+          <li><a href="#cv">CV</a></li>
           <!-- <li><a href="#patents">Patents</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#resume">Resume</a></li>
@@ -89,12 +91,26 @@
 
       <hr>
 
+      <h4 class="muted" id="aboutme">About Me</h4>
+      <div class="row-fluid" align="justify">
+        Here write 2-3 lines about me.
+      </div>
+
+      <hr>
+
       <h4 class="muted" id="publications">Publications</h4>
       <div class="row-fluid" align="justify">
         Krishnan, Sunder Ram, Chandra Sekhar Seelamantula, and Purvasha Chakravarti. <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6734684">Spatially Adaptive Kernel Regression Using Risk Estimation.</a> IEEE Signal Processing Letters 21.4 (2014): 445-448.
         <br>
         <br>
         Hechtlinger, Yotam, Purvasha Chakravarti, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">A Generalization of Convolutional Neural Networks to Graph-Structured Data.</a> arXiv preprint arXiv:1704.08165 (2017).
+      </div>
+
+      <hr>
+
+      <h4 class="muted" id="cv">Curriculum Vitae</h4>
+      <div class="row-fluid" align="justify">
+        Please down load my CV from <a href="cv.pdf">here</a>.
       </div>
 
     </div> <!-- /container -->
