Added selected presentations and posters section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <li><a href="#aboutme">About Me</a></li>
           <li><a href="#publications">Publications</a></li>
           <li><a href="#cv">CV</a></li>
+          <li><a href="#posters">Posters</a></li>
           <!-- <li><a href="#patents">Patents</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#resume">Resume</a></li>
@@ -104,6 +105,16 @@
         <br>
         <br>
         Hechtlinger, Yotam, Purvasha Chakravarti, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">A Generalization of Convolutional Neural Networks to Graph-Structured Data.</a> arXiv preprint arXiv:1704.08165 (2017).
+      </div>
+
+      <hr>
+
+      <h4 class="muted" id="cv">Selected Presentations and Posters</h4>
+      <div class="row-fluid" align="justify">
+        authors. <a href="link">title.</a> place.
+        <br>
+        <br>
+        authors. <a hred="link">title.</a> place.
       </div>
 
       <hr>
