Made changes by purvasha

--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li><a href="#aboutme">About Me</a></li>
+          <li><a href="#research">Research Interests</a></li>
           <li><a href="#publications">Publications</a></li>
           <li><a href="#cv">CV</a></li>
           <li><a href="#posters">Posters</a></li>
+          <li><a href="#contact">Contact</a></li>
           <!-- <li><a href="#patents">Patents</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#resume">Resume</a></li>
@@ -94,27 +96,104 @@
 
       <h4 class="muted" id="aboutme">About Me</h4>
       <div class="row-fluid" align="justify">
-        Here write 2-3 lines about me.
+        I am a Ph.D. candidate in the <a href="http://stat.cmu.edu">Department of Statistics and Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>. Previously, I have obtained a Masters in Machine Learning from CMU and a Bachelors in Statistics from the <a href="https://www.isical.ac.in/">Indian
+          Statistical Institute, Kolkata</a>.
+        <br>
+        <br>
+        I am currently working with <a href="http://www.stat.cmu.edu/~larry/">Larry Wasserman</a>
+        and <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a> on developing a
+        clustering algorithm that comes equipped with a significance guarantee.
       </div>
 
       <hr>
 
-      <h4 class="muted" id="publications">Publications</h4>
+      <h4 class="muted" id="research">Research Interests</h4>
       <div class="row-fluid" align="justify">
-        Krishnan, Sunder Ram, Chandra Sekhar Seelamantula, and Purvasha Chakravarti. <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6734684">Spatially Adaptive Kernel Regression Using Risk Estimation.</a> IEEE Signal Processing Letters 21.4 (2014): 445-448.
+        My research interests span theory and algorithms in the fields of
+        statistics and machine learning. Specifically, it includes developing
+        clustering and density estimation algorithms and applying them to
+        science and technology.
         <br>
         <br>
-        Hechtlinger, Yotam, Purvasha Chakravarti, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">A Generalization of Convolutional Neural Networks to Graph-Structured Data.</a> arXiv preprint arXiv:1704.08165 (2017).
+        In my current work with <a href="http://www.stat.cmu.edu/~larry/">Larry Wasserman</a> and <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a>, we develop a test for whether a
+        mixture of Gaussians provides a better fit to the data relative to a
+        single Gaussian and use this test to develop a clustering algorithm. We
+        show how the test can be used in a hierarchical as well as a sequential
+        manner for clustering.
+        <br>
+        <br>
+        As a part of my Ph.D. course work, for my Advanced Data Analysis Project, I
+        worked with <a href="http://www.stat.cmu.edu/~bill/">Bill Eddy</a>. We developed a
+        multi-country compartment model and a multi-country time series model to
+        predict the spread of Chikungunya in the Americas.
+        <br>
+        <br>
+        I have also worked on developing a convolutional neural network for
+        graph-structured data with <a
+        href="http://www.stat.cmu.edu/~yhechtli/">Yotam Hechtlinger</a> and
+      Jining Qin.
+      </div>
+
+      <hr>
+
+      <h4 class="muted" id="publications">Publications and Reports</h4>
+      <div class="row-fluid" align="justify">
+        Hechtlinger, Yotam, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
+        <br>
+        A Generalization of Convolutional Neural Networks to Graph-Structured Data.</a>
+        <br>
+        arXiv preprint arXiv:1704.08165 (2017).
+        <br>
+        <br>
+        <a href="report.pdf">Statistical Analysis of the Chikungunya Fever (ADA Final Report; 2016)</a>.
+        <br>
+        Joint work with Bill Eddy and Virginia Dato.
+        <br>
+        <br>
+        Krishnan, Sunder Ram, Chandra Sekhar Seelamantula, and <b>Purvasha Chakravarti</b>.
+        <br>
+        <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6734684">Spatially Adaptive Kernel Regression Using Risk Estimation.</a>
+        <br>
+        IEEE Signal Processing Letters 21.4 (2014): 445-448.
       </div>
 
       <hr>
 
       <h4 class="muted" id="cv">Selected Presentations and Posters</h4>
       <div class="row-fluid" align="justify">
-        authors. <a href="link">title.</a> place.
+        <b>Hierarchical Significance Testing for Gaussian Mixture Clustering</b>
+        <br>
+        Joint work with Larry Wasserman and Sivaraman Balakrishnan.
+        <br>
+        Contributed Talk at Joint Statistical Meetings, Vancouver, Canada, 2018.
         <br>
         <br>
-        authors. <a hred="link">title.</a> place.
+        <b>Gaussian Mixture Clustering Using Relative Tests of Fit (RIFTs)</b>
+        <br>
+        Joint work with Larry Wasserman and Sivaraman Balakrishnan.
+        <br>
+        Working Group on Model-Based Clustering Summer Session, Ann Arbor, 2018.
+        <br>
+        <br>
+        <b>Statistical Significance of k-Means Clustering</b>
+        <br>
+        Joint work with Larry Wasserman and Sivaraman Balakrishnan.
+        <br>
+        Speed Presentation at Joint Statistical Meetings, Baltimore, Maryland, 2017.
+        <br>
+        <br>
+        <b>Statistical Analysis of the Chikungunya Fever</b>
+        <br>
+        Joint work with Bill Eddy and Virginia Dato.
+        <br>
+        Women in Statistics and Data Science Conference, Charlotte, North Carolina, 2016.
+        <br>
+        <br>
+        <b>Women in Statistics at Carnegie Mellon University</b>
+        <br>
+        Joint work with Shannon Gallagher.
+        <br>
+        Women in Statistics and Data Science Conference, Charlotte, North Carolina, 2016.
       </div>
 
       <hr>
@@ -122,6 +201,13 @@
       <h4 class="muted" id="cv">Curriculum Vitae</h4>
       <div class="row-fluid" align="justify">
         Please down load my CV from <a href="cv.pdf">here</a>.
+      </div>
+
+      <hr>
+
+      <h4 class="muted" id="cv">Contact</h4>
+      <div class="row-fluid" align="justify">
+        Email: pchakrav [at] stat [dot] cmu [dot] edu
       </div>
 
     </div> <!-- /container -->
