Added latest JSM talk.

--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@
 
       <h4 class="muted" id="cv">Selected Presentations and Posters</h4>
       <div class="row-fluid" align="justify">
+        <b>Recent Advances in Dimension Reduction and Clustering</b>
+        <br>
+        Joint work with Larry Wasserman and Sivaraman Balakrishnan (<a href=https://ww2.amstat.org/meetings/jsm/2019/onlineprogram/AbstractDetails.cfm?abstractid=304606>slides</a>).
+        <br>
+        Contributed Talk at Joint Statistical Meetings, Vancouver, Canada, 2019.
+        <br>
+        <br>
         <b>Hierarchical Significance Testing for Gaussian Mixture Clustering</b>
         <br>
         Joint work with Larry Wasserman and Sivaraman Balakrishnan.
