Added poster presentation done at National Academy of Sciences

--- a/index.html
+++ b/index.html
@@ -175,7 +175,14 @@
         <br>
         Joint work with Larry Wasserman and Sivaraman Balakrishnan (<a href=https://ww2.amstat.org/meetings/jsm/2019/onlineprogram/AbstractDetails.cfm?abstractid=304606>slides</a>).
         <br>
-        Contributed Talk at Joint Statistical Meetings, Vancouver, Canada, 2019.
+        Contributed Talk at Joint Statistical Meetings, Denver, Colorado, 2019.
+        <br>
+        <br>
+        <b>A Generalization of Convolutional Neural Networks to Graph-Structured Data</b>
+        <br>
+        Joint work with <a href="http://www.stat.cmu.edu/~yhechtli/">Yotam Hechtlinger</a> and Jining Qin.
+        <br>
+        Poster at National Academy of Sciences Arthur M. Sackler Colloquium, The Science of Deep Learning, Washington, D.C., 2019.
         <br>
         <br>
         <b>Hierarchical Significance Testing for Gaussian Mixture Clustering</b>
@@ -189,7 +196,7 @@
         <br>
         Joint work with Larry Wasserman and Sivaraman Balakrishnan.
         <br>
-        Working Group on Model-Based Clustering Summer Session, Ann Arbor, 2018.
+        Working Group on Model-Based Clustering Summer Session, Ann Arbor, Michigan, 2018.
         <br>
         <br>
         <b>Statistical Significance of k-Means Clustering</b>
