Removed Yotam link

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <br>
         <b>A Generalization of Convolutional Neural Networks to Graph-Structured Data</b>
         <br>
-        Joint work with <a href="http://www.stat.cmu.edu/~yhechtli/">Yotam Hechtlinger</a> and Jining Qin.
+        Joint work with Yotam Hechtlinger and Jining Qin.
         <br>
         Poster at National Academy of Sciences Arthur M. Sackler Colloquium, The Science of Deep Learning, Washington, D.C., 2019.
         <br>
