Added final paper

--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
 
       <h4 class="muted" id="publications">Publications and Reports</h4>
       <div class="row-fluid" align="justify">
+        <b>Purvasha Chakravarti</b>, Sivaraman Balakrishnan, and Larry Wasserman. <a href="http://arxiv.org/abs/1910.02566">
+        <br>
+        Gaussian Mixture Clustering Using Relative Tests of Fit.</a>
+        <br>
+        Submitted to Journal of the American Statistical Association (JASA) Applications and Case Studies (2019) (arXiv preprint arXiv:1910.02566)
+        <br>
+        <br>
         Hechtlinger, Yotam, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
         <br>
         A Generalization of Convolutional Neural Networks to Graph-Structured Data.</a>
