Added awards and recognitions section

--- a/index.html
+++ b/index.html
@@ -229,6 +229,30 @@
 
       <hr>
 
+      <h4 class="muted" id="cv">Awards and recognition</h4>
+      <div class="row-fluid" align="justify">
+        <b>Honorable Mention for the 2019 Caucus for Women in Statistics (CWS) Do-Bui Travel Award.</b>
+        <br>
+        Caucus for Women in Statistics (CWS), Joint Statistical Meetings, 2019.
+        <br>
+        <br>
+        <b>National Level Scholarship</b>
+        <br>
+        Obtained the INSPIRE Scholarship offered by the Department of Science and Technology (DST), Government of India from 2009 - 2014.
+        <br>
+        <br>
+        <b>Summer Fellowship</b>
+        <br>
+        Received Indian Academy of Science Fellowship, 2012.
+        <br>
+        <br>
+        <b>Cyber Olympiad</b>
+        <br>
+        Secured All India rank 19 in 5th National Cyber Olympiad held on 19th February, 2006.
+      </div>
+
+      <hr>
+
       <h4 class="muted" id="cv">Curriculum Vitae</h4>
       <div class="row-fluid" align="justify">
         Please down load my CV from <a href="cv.pdf">here</a>.
