Added proposal slides link and document

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         Gaussian Mixture Clustering Using Relative Tests of Fit.</a>
         <br>
         Submitted to Journal of the American Statistical Association (JASA) Applications and Case Studies (2019) (arXiv preprint arXiv:1910.02566)
+        Ph.D. thesis proposal slides (<a href="proposal_slides.pdf">here</a>).
         <br>
         <br>
         Hechtlinger, Yotam, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
