Added teaching experience from CV.

--- a/index.html
+++ b/index.html
@@ -254,6 +254,59 @@
 
       <hr>
 
+      <h4 class="muted" id="cv">Teaching experience</h4>
+      <div class="row-fluid" align="justify">
+        <b>Instructor</b>
+        <br>
+        CMU 36-225 Introduction to Probability Theory
+        <br>
+        Summer 2019 with 43 students.
+        <br>
+        <br>
+        CMU 36-200 Reasoning with Data
+        <br>
+        Summer 2018 with 8 students.
+        <br>
+        <br>
+        CMU 36-226 Introduction to Statistical Inference
+        <br>
+        Summer 2016 with 26 students, 2017 with 31 students.
+        <br>
+        <br>
+        <b>Teaching assistant</b>
+        <br>
+        CMU 36-303 Sampling, Survey and Society
+        <br>
+        Spring 2019.
+        <br>
+        <br>
+        CMU 36-401 Modern Regression
+        <br>
+        Fall 2018 as head TA, Fall 2014.
+        <br>
+        <br>
+        CMU 36-402 Advanced Methods for Data Analysis
+        <br>
+        Spring 2018, Spring 2017, Spring 2016.
+        <br>
+        <br>
+        CMU 36-705 Intermediate Statistics
+        <br>
+        Fall 2017, Fall 2016.
+        <br>
+        <br>
+        CMU 36-225 Introduction to Probability Theory
+        <br>
+        Fall 2015.
+        <br>
+        <br>
+        CMU 36-625 Probability and Mathematical Statistics (Hons.)
+        <br>
+        Spring 2015.
+      </div>
+
+      <hr>
+
       <h4 class="muted" id="cv">Curriculum Vitae</h4>
       <div class="row-fluid" align="justify">
         Please down load my CV from <a href="cv.pdf">here</a>.
