Added temp para and removed head TA

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
         Submitted to Journal of the American Statistical Association (JASA) Applications and Case Studies (2019) (arXiv preprint arXiv:1910.02566)
         Ph.D. thesis proposal slides (<a href="proposal_slides.pdf">here</a>).
         <br>
+        In high energy physics, a most important problem is to detect if there is any significant difference between the distribution of just background events (generated from an assumed MC model) and the distribution of the actual observations, which could be a mixture of background and signal events. We argue that if there wasn't a significant difference between the two distributions, that is, in the absence of signal events, a random forest classifier shouldn't be able to differentiate the background events from the observations. Therefore, we propose a test based on the performance of a random forest in differentiating between background only events and actual observations.
+
+        We also propose an alternate test that first models the background using a mixture of multivariate Gaussians and then models the observations using a mixture of the background model and some additional Gaussian mixture components. We then test for the relative fit of the background model to the fit of the mixture with the additional components.
+        <br>
         <br>
         Hechtlinger, Yotam, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
         <br>
@@ -282,7 +286,7 @@
         <br>
         CMU 36-401 Modern Regression
         <br>
-        Fall 2018 as head TA, Fall 2014.
+        Fall 2018, Fall 2014.
         <br>
         <br>
         CMU 36-402 Advanced Methods for Data Analysis
