--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <h4 class="muted" id="aboutme">About Me</h4>
       <div class="row-fluid" align="justify">
-        I am a Ph.D. candidate in the <a href="http://stat.cmu.edu">Department of Statistics and Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>. Previously, I have obtained a Masters in Machine Learning from CMU and a Bachelors in Statistics from the <a href="https://www.isical.ac.in/">Indian
+        I am a Ph.D. candidate in the <a href="http://stat.cmu.edu">Department of Statistics and Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>. Previously, I have obtained a Masters in <a href="https://www.ml.cmu.edu/">Machine Learning Department</a> from CMU and a Bachelors and Masters in Statistics from the <a href="https://www.isical.ac.in/">Indian
           Statistical Institute, Kolkata</a>.
         <br>
         <br>
