Added tiny research interests and revised About me

--- a/index.html
+++ b/index.html
@@ -106,42 +106,23 @@
 
       <h4 class="muted" id="aboutme">About Me</h4>
       <div class="row-fluid" align="justify">
-        I am a Ph.D. candidate in the <a href="http://stat.cmu.edu">Department of Statistics and Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>. Previously, I have obtained a Masters in <a href="https://www.ml.cmu.edu/">Machine Learning Department</a> from CMU and a Bachelors and Masters in Statistics from the <a href="https://www.isical.ac.in/">Indian
-          Statistical Institute, Kolkata</a>.
+        I am a Ph.D. candidate in the <a href="http://stat.cmu.edu">Department of Statistics and Data Science</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, working under the supervision of <a href="http://www.stat.cmu.edu/~larry/">Professor Larry Wasserman</a>. 
         <br>
         <br>
-        I am currently working with <a href="http://www.stat.cmu.edu/~larry/">Larry Wasserman</a>
-        and <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a> on developing a
-        clustering algorithm that comes equipped with a significance guarantee.
+        Previously, I have obtained a Masters in Machine Learning from <a href="https://www.ml.cmu.edu/">Machine Learning Department</a> at CMU and a Bachelors and Masters in Statistics from the <a href="https://www.isical.ac.in/">Indian Statistical Institute</a>, Kolkata.
+        <br>
+        <br>
+        In my free time, I love to perform music, especially Bollywood music and Zumba!
       </div>
 
       <hr>
 
       <h4 class="muted" id="research">Research Interests</h4>
       <div class="row-fluid" align="justify">
-        My research interests span theory and algorithms in the fields of
-        statistics and machine learning. Specifically, it includes developing
-        clustering and density estimation algorithms and applying them to
-        science and technology.
+        My research mainly focuses on developing theory and methods in the fields of statistics and machine learning, to understand complex high-dimensional data. Specifically, it includes developing new hypothesis testing, clustering and density estimation algorithms and applying them to science and technology.
         <br>
         <br>
-        In my current work with <a href="http://www.stat.cmu.edu/~larry/">Larry Wasserman</a> and <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a>, we develop a test for whether a
-        mixture of Gaussians provides a better fit to the data relative to a
-        single Gaussian and use this test to develop a clustering algorithm. We
-        show how the test can be used in a hierarchical as well as a sequential
-        manner for clustering.
-        <br>
-        <br>
-        As a part of my Ph.D. course work, for my Advanced Data Analysis Project, I
-        worked with <a href="http://www.stat.cmu.edu/~bill/">Bill Eddy</a>. We developed a
-        multi-country compartment model and a multi-country time series model to
-        predict the spread of Chikungunya in the Americas.
-        <br>
-        <br>
-        I have also worked on developing a convolutional neural network for
-        graph-structured data with <a
-        href="http://www.stat.cmu.edu/~yhechtli/">Yotam Hechtlinger</a> and
-      Jining Qin.
+        My work with <a href="http://www.stat.cmu.edu/~siva/">Sivaraman Balakrishnan</a> and Larry Wasserman proposes a novel clustering algorithm that comes equipped with a significance guarantee. Meanwhile, my work with <a href="http://www.stat.cmu.edu/people/faculty/mikael-kuusela">Mikael Kuusela</a> and Larry Wasserman proposes tests to detect the presence of new physics particles in particle physics datasets. Recently, I have been researching different anamoly detection algorithms and different ways to understand the performance of a classification algorithm.
       </div>
 
       <hr>
@@ -230,7 +211,7 @@
 
       <hr>
 
-      <h4 class="muted" id="cv">Awards and recognition</h4>
+      <h4 class="muted" id="cv">Awards and Recognition</h4>
       <div class="row-fluid" align="justify">
         <b>Honorable Mention for the 2019 Caucus for Women in Statistics (CWS) Do-Bui Travel Award.</b>
         <br>
@@ -254,7 +235,7 @@
 
       <hr>
 
-      <h4 class="muted" id="cv">Teaching experience</h4>
+      <h4 class="muted" id="cv">Teaching Experience</h4>
       <div class="row-fluid" align="justify">
         <b>Instructor</b>
         <br>
