--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
         Submitted to Journal of the American Statistical Association (JASA) Applications and Case Studies (2019) (arXiv preprint arXiv:1910.02566)
         Ph.D. thesis proposal slides (<a href="proposal_slides.pdf">here</a>).
         <br>
+        <div class="muted">We develop a test for whether a mixture of Gaussians provides a better fit to the data relative to a single Gaussian, without assuming that either model is correct. We then use this test to develop a clustering algorithm that comes equipped with significance guarantees. We show how the test can be used in a hierarchical as well as a sequential manner for clustering.</div>
+        <br>
         <br>
         Hechtlinger, Yotam, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
         <br>
