Added descriptions to all research projects.

--- a/index.html
+++ b/index.html
@@ -138,26 +138,28 @@
         <br>
         <div class="muted">We develop a test for whether a mixture of Gaussians provides a better fit to the data relative to a single Gaussian, without assuming that either model is correct. We then use this test to develop a clustering algorithm that comes equipped with significance guarantees. We show how the test can be used in a hierarchical as well as a sequential manner for clustering.</div>
         <br>
-        <br>
         Hechtlinger, Yotam, <b>Purvasha Chakravarti</b>, and Jining Qin. <a href="https://arxiv.org/pdf/1704.08165.pdf">
         <br>
         A Generalization of Convolutional Neural Networks to Graph-Structured Data.</a>
         <br>
         arXiv preprint arXiv:1704.08165 (2017).
         <br>
+        <div class="muted">We propose a novel spatial convolution that can be applied to graph-structured data. We use a random walk to quantify a general notion of neighborhood for graph-structured data, analogous to the way the standard convolution uses the spatial neighborhood of a pixel on the grid. The convolution has an intuitive interpretation, is efficient and scalable and can also be used on data with varying graph structure.</div>
         <br>
         <a href="report.pdf">Statistical Analysis of the Chikungunya Fever (ADA Final Report; 2016)</a>.
         <br>
         Joint work with Bill Eddy and Virginia Dato.
         <br>
+        <div class="muted">We develop a multi-country compartment model and a multi-country time series model to predict the spread of Chikungunya in the Americas.</div>
         <br>
         Krishnan, Sunder Ram, Chandra Sekhar Seelamantula, and <b>Purvasha Chakravarti</b>.
         <br>
         <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6734684">Spatially Adaptive Kernel Regression Using Risk Estimation.</a>
         <br>
         IEEE Signal Processing Letters 21.4 (2014): 445-448.
+        <br>
+        <div class="muted">An important question in kernel regression is one of estimating the order and bandwidth parameters from available noisy data. We propose to solve the problem within a risk estimation framework. Considering an independent and identically distributed (i.i.d.) Gaussian observations model, we use Stein's unbiased risk estimator (SURE) to estimate a weighted mean-square error (MSE) risk, and optimize it with respect to the order and bandwidth parameters. We consider the problem of image restoration from uniform/non-uniform data, and show that the SURE approach to spatially adaptive kernel regression results in better quality estimation compared with its spatially non-adaptive counterparts.</div>
       </div>
-
       <hr>
 
       <h4 class="muted" id="cv">Selected Presentations and Posters</h4>
