Modified JASA description

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <br>
         Gaussian Mixture Clustering Using Relative Tests of Fit.</a>
         <br>
-        Submitted to Journal of the American Statistical Association (JASA) Applications and Case Studies (2019) (arXiv preprint arXiv:1910.02566)
+        Submitted to Journal of the American Statistical Association (JASA) Theory and Methods (2019) (arXiv preprint arXiv:1910.02566)
         Ph.D. thesis proposal slides (<a href="proposal_slides.pdf">here</a>).
         <br>
         <div class="muted">We develop a test for whether a mixture of Gaussians provides a better fit to the data relative to a single Gaussian, without assuming that either model is correct. We then use this test to develop a clustering algorithm that comes equipped with significance guarantees. We show how the test can be used in a hierarchical as well as a sequential manner for clustering.</div>
